strange styling took out bootstrap

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Resume</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles.css">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous"> -->
+
 </head>
 
 <body>
@@ -16,12 +17,12 @@
     <header>
       <h1 class="text-center bg-light border-bottom">Luke King</h1>
       <h3>Caldwell, Idaho</h3>
-      <h3 href="tel:2085980293">(208)-598-0293</h3>
+      <h4 href="tel:2085980293">(208)-598-0293</h4>
       <a href="mailto:lkingfrm@gmail.com">lkingfrm@gmail.com</a>
     </header>
     <main>
       <section id="summary">
-        <h1 class="bg-light">Summary</h1>
+        <h1 class="summary-title">Summary</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro molestias cum ducimus consequuntur,
           id, dolores voluptatem eos doloribus at eum error voluptate. Similique fugit, tenetur cupiditate culpa
           ducimus alias.</p>
@@ -38,7 +39,7 @@
         <h1 class="bg-light">Experience</h1>
         <div class="job">
           <h4>Company Name</h4>
-          <h4>Job Title</h4>
+          <h5>Job Title</h5>
           <ul>
             <li>duties</li>
             <li>duties</li>
@@ -47,7 +48,7 @@
         </div>
         <div class="job">
           <h4>Company Name</h4>
-          <h4>Job Title</h4>
+          <h5>Job Title</h5>
           <ul>
             <li>duties</li>
             <li>duties</li>
