added font and styling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Resume</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+    crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous"> -->
-
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
       <h1 class="text-center bg-light border-bottom">Luke King</h1>
       <h3>Caldwell, Idaho</h3>
       <h4 href="tel:2085980293">(208)-598-0293</h4>
-      <a href="mailto:lkingfrm@gmail.com">lkingfrm@gmail.com</a>
+      <a href="mailto:lkingfrm@gmail.com">lkingfrm@gmail.com</a><i class="fab fa-twitter"></i>
     </header>
     <main>
       <section id="summary">
