--- a/index.html
+++ b/index.html
@@ -1,66 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Resume</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Resume</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-    crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous"> -->
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
-
-<body>
-  <div class="container">
-    <header>
-      <h1 class="text-center bg-light border-bottom">Luke King</h1>
-      <h3>Caldwell, Idaho</h3>
-      <h4 href="tel:2085980293">(208)-598-0293</h4>
-      <a href="mailto:lkingfrm@gmail.com">lkingfrm@gmail.com</a><i class="fab fa-twitter"></i>
-    </header>
-    <main>
-      <section id="summary">
-        <h1 class="summary-title">Summary</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro molestias cum ducimus consequuntur,
-          id, dolores voluptatem eos doloribus at eum error voluptate. Similique fugit, tenetur cupiditate culpa
-          ducimus alias.</p>
-      </section>
-      <section id="education">
-        <h1 class="bg-light">Education</h1>
-        <div class="school">
-          <h4>Boise CodeWorks</h4>
-          <h4>2018 -2019</h4>
-          <h4>Immersive Full Stack</h4>
-        </div>
-      </section>
-      <section id="work-experience">
-        <h1 class="bg-light">Experience</h1>
-        <div class="job">
-          <h4>Company Name</h4>
-          <h5>Job Title</h5>
-          <ul>
-            <li>duties</li>
-            <li>duties</li>
-            <li>duties</li>
-          </ul>
-        </div>
-        <div class="job">
-          <h4>Company Name</h4>
-          <h5>Job Title</h5>
-          <ul>
-            <li>duties</li>
-            <li>duties</li>
-            <li>duties</li>
-          </ul>
-        </div>
-
-      </section>
-    </main>
-  </div>
-</body>
-
+  <body>
+    <div class="container">
+      <header>
+        <h1 class="text-center bg-light border-bottom">Luke King</h1>
+        <h3>Caldwell, Idaho</h3>
+        <h4 href="tel:2085980293">(208)-598-0293</h4>
+        <a href="mailto:lkingfrm@gmail.com">lkingfrm@gmail.com</a
+        ><i class="fab fa-twitter"></i>
+      </header>
+      <main>
+        <section id="summary">
+          <h1 class="summary-title">Summary</h1>
+          <p>
+            Currently I'm pursuing a career in software engineering and
+            development. I have been studying self guided since early 2017 and
+            have become more and more interested in this field for my career. I
+            decided to take the Immersive Full Stack course at Boise Code Works
+            to level up what I had learned so far and help fill in any gaps in
+            what I had learned on my own. My past work has been mainly
+            agriculture. I have been an owner/partner in two farming ventures
+            and one contract farming company. In between I also was an owner
+            /operator in a small trucking company that my brother and I ran for
+            about nine years. Most recently my brother and ran a small
+            construction company that also sold used farm irrigation equipment.
+            It might seem that to go from agriculture to software is a dramatic
+            change in directions, but there are many skills such as problem
+            analysis, project priority structuring, project and personnel
+            management, and resource allocation that will be valuable skills to
+            have in this industry. Being a small business I have been constantly
+            building or repairing. I use different tools now but problem solving
+            approaches learned before will continue to benefit me as I move
+            ahead.
+          </p>
+        </section>
+        <section id="education">
+          <h1 class="bg-light">Education</h1>
+          <div class="school">
+            <h4>Boise CodeWorks</h4>
+            <h4>2018 -2019</h4>
+            <h4>Immersive Full Stack</h4>
+          </div>
+        </section>
+        <section id="work-experience">
+          <h1 class="bg-light">Experience</h1>
+          <div class="job">
+            <h4>Construction Restoration and Repair</h4>
+            <h5>Owner / Partner</h5>
+            <ul>
+              <li>Finance Manager</li>
+              <li>Opperations</li>
+              <li>Sales</li>
+            </ul>
+          </div>
+          <div class="job">
+            <h4>E & L Custom Ag LLC</h4>
+            <h5>Owner / Partner</h5>
+            <ul>
+              <li>Finance Manager</li>
+              <li>Opperations</li>
+              <li>Sales</li>
+            </ul>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
